# github-issue-triage-mcp

./: README.md  conftest.py  pyproject.toml
src/github_issue_triage_mcp/: __init__.py  __main__.py  classifier.py  github_client.py  server.py
tests/: test_classifier.py  test_classify_and_label_issue.py  test_entrypoint.py  test_github_client.py  test_junit_report_writable.py  test_list_issues.py
